<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/logoapp"
    android:backgroundTint="#DFC0C0"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".hospedaje">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="100dp"
        android:paddingHorizontal="@dimen/cardview_default_elevation"
        android:text="@string/hospedaje"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="295dp"
        android:layout_height="91dp"
        android:layout_marginTop="76dp"
        android:layout_marginEnd="100dp"
        android:paddingHorizontal="@dimen/cardview_default_elevation"
        android:text="@string/hospedaje_msg"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/homeCompra"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginBottom="16dp"
        android:text="@string/Home"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/salirHospedaje"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="93dp"
        android:layout_marginBottom="16dp"
        android:text="@string/SALIR"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ScrollView
        android:layout_width="404dp"
        android:layout_height="432dp"
        app:layout_constraintBottom_toTopOf="@+id/homeCompra"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:layout_editor_absoluteX="-6dp">

        <LinearLayout
            android:layout_width="416dp"
            android:layout_height="493dp"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="312dp"
                android:layout_gravity="center_horizontal"
                android:maxWidth="300dp"
                android:maxHeight="300dp"
                android:src="@drawable/quintaesmeralda"
                app:srcCompat="@drawable/quintaesmeralda" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:text="@string/quinta_la_esmeralda"
                android:textAlignment="center" />

            <Button
                android:id="@+id/hospedaje001"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:text="@string/Ingresar" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="312dp"
                android:layout_gravity="center_horizontal"
                android:maxWidth="300dp"
                android:maxHeight="300dp"
                android:src="@drawable/cayanaglamping"
                app:srcCompat="@drawable/cayanaglamping" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:text="@string/cayanaglamping"
                android:textAlignment="center" />

            <Button
                android:id="@+id/hospedaje002"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:text="@string/Ingresar" />

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>