<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/logoapp"
    android:backgroundTint="#DFC0C0"
    android:visibility="visible"
    tools:context=".home"
    tools:visibility="visible">

    <TextView
        android:id="@+id/textView"
        android:layout_width="349dp"
        android:layout_height="45dp"
        android:layout_marginTop="384dp"
        android:paddingHorizontal="@dimen/cardview_default_elevation"
        android:text="@string/sugerencia"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="100dp"
        android:paddingHorizontal="@dimen/cardview_default_elevation"
        android:text="@string/bienvenida"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="295dp"
        android:layout_height="91dp"
        android:layout_marginTop="76dp"
        android:layout_marginEnd="100dp"
        android:paddingHorizontal="@dimen/cardview_default_elevation"
        android:text="@string/mensaje"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginTop="189dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@color/white"
            android:orientation="horizontal"
            app:srcCompat="@mipmap/food_foreground"
            tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck,SpeakableTextPresentCheck" />

        <Space
            android:layout_width="100dp"
            android:layout_height="wrap_content" />

        <ImageButton
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@color/white"
            app:srcCompat="@mipmap/hostal_foreground"
            tools:ignore="SpeakableTextPresentCheck"
            tools:layout_editor_absoluteX="129dp"
            tools:layout_editor_absoluteY="236dp" />

        <Space
            android:layout_width="100dp"
            android:layout_height="wrap_content" />

        <ImageButton
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@color/white"
            app:srcCompat="@mipmap/lugaress_foreground"
            tools:ignore="SpeakableTextPresentCheck"
            tools:layout_editor_absoluteX="243dp"
            tools:layout_editor_absoluteY="234dp" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="289dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/categoriaComida"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Comida"
            android:textAlignment="center" />

        <Space
            android:layout_width="30dp"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/categoriaHospedaje"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Hospedaje"
            android:textAlignment="center" />

        <Space
            android:layout_width="50dp"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/categoriaTurismo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Turismo"
            android:textAlignment="center" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="400dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="500dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="600dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="94dp"
        android:layout_height="102dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toStartOf="@+id/imageView2"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:srcCompat="@drawable/soldelvenado" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="94dp"
        android:layout_height="102dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/linearLayout"
        app:srcCompat="@drawable/laesquinadedonakaty" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="94dp"
        android:layout_height="102dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="28dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/cabanaelchangue" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="94dp"
        android:layout_height="102dp"
        android:layout_marginEnd="156dp"
        android:layout_marginBottom="28dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/cayanaglamping" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="94dp"
        android:layout_height="102dp"
        android:layout_marginStart="40dp"
        android:layout_marginBottom="28dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/carpinteriaagustines" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="92dp"
        android:layout_height="105dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="28dp"
        app:layout_constraintEnd_toStartOf="@+id/imageView"
        app:layout_constraintHorizontal_bias="0.111"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:srcCompat="@drawable/truchasdelsalado" />

</androidx.constraintlayout.widget.ConstraintLayout>